# clickhouse-haskell

./: .directory  ChangeLog.md  LICENSE  README.md  clickhouse-haskell.cabal  dump.txt  package.yaml  stack.yaml  text.txt
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-23_04-37-08/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-24_07-27-28/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-24_10-59-52/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-26_22-43-22/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-29_19-57-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_15-55-23/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_17-20-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_18-17-17/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_19-25-51/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_20-25-31/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_20-32-37/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_22-59-19/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-30_23-36-58/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-31_18-42-41/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-08-31_20-14-49/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_21-32-25/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_21-42-59/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_21-53-55/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_22-00-43/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_22-45-34/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-02_22-50-40/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-07_19-44-13/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-07_20-07-10/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-07_23-06-39/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-08_00-12-13/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-08_21-15-16/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-09_00-44-51/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-01_01-48-34/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-01_04-40-39/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-05_22-53-12/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-07_05-45-26/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-05_01-55-25/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-13_15-52-09/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-14_18-27-49/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-15_22-27-58/: details.md  results.csv  results.md  results.txt
.github/workflows/: haskell.yml
app/: Main.hs  benchmark.hs  chart.py
benchmark/: Main.hs  benchmark.hs  result.md  testTables.sql
doc/html/clickhouse-haskell/: ClickHouseDriver-Core-Block.html  ClickHouseDriver-Core-Client.html  ClickHouseDriver-Core-ClientProtocol.html  ClickHouseDriver-Core-Column.html  (+43 more)
docs/: MainFramework.md
src/: ClickHouseDriver.hs
src/ClickHouseDriver/: Core.hs  Default.hs  Helpers.hs  HttpConnection.hs  Query.hs  Types.hs
src/Database/: ClickHouseDriver.hs
test/: ArrayTest.sql  CreateTable.sql  Spec.hs  UUID.sql  bigtest.sql  decimal.sql  example.csv  scratch.txt  table2.sql  tableGen.sql  test.py  time.sql  wide.sql
test/Test/: ColumnSpec.hs  HTTPSpec.hs  IO.hs  Main.hs  QuerySpec.hs
(+103 files in other folders)
