cabal-version:  1.12
name:           clickhouse-haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/clickhouse-haskell#readme>
synopsis:       Clickhouse client in Haskell
homepage:       https://github.com/MaboroshiChan/clickhouse-haskell/blob/master/README.md
bug-reports:    https://github.com/2049foundation/clickhouse-haskell/issues
author:         Shi You
maintainer:     youshi@emqx.io
copyright:      2020 Shi You
category:       Database
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/MaboroshiChan/clickhouse-haskell

library
  exposed-modules:
      ClickHouseDriver.Core
      ClickHouseDriver.Core.HTTP
      ClickHouseDriver.Core.HTTP.Helpers
      ClickHouseDriver.Core.HTTP.Client
      ClickHouseDriver.Core.HTTP.Types
      ClickHouseDriver.Core.HTTP.Connection
      ClickHouseDriver.Core.Error
      ClickHouseDriver.Core.QueryProcessingStage
      ClickHouseDriver.Core.Defines
      ClickHouseDriver.Core.ServerProtocol
      ClickHouseDriver.Core.ClientProtocol
      ClickHouseDriver.Core.Block
      ClickHouseDriver.Core.Client
      ClickHouseDriver.Core.Connection
      ClickHouseDriver.Core.Types
      ClickHouseDriver.Core.Column
      ClickHouseDriver.IO.BufferedWriter
      ClickHouseDriver.IO.BufferedReader
  other-modules:
      Paths_clickhouse_haskell
  hs-source-dirs:
      src
  build-depends:
      aeson
    , streaming-commons
    , connection-pool
    , data-default-class
    , split
    , uuid
    , QuickCheck
    , io-streams
    , uri-encode
    , attoparsec
    , mtl
    , unix-time
    , data-dword
    , network-ip
    , io-streams
    , filepath
    , uri-encode
    , tz
    , time
    , bytestring-to-vector
    , monad-loops
    , word8
    , monad-parallel
    , async 
    , hashable
    , array
    , base >=4.7 && <5
    , binary
    , bytestring
    , call-stack
    , containers
    , exceptions
    , hashmap
    , haxl
    , http-client
    , network
    , network-simple
    , parsec
    , text
    , transformers
    , unordered-containers
    , vector
  default-language: Haskell2010
  c-sources: ./src/ClickHouseDriver/CBits/varuint.c
  include-dirs: ./src/ClickHouseDriver/Include 
  includes: varuint.h
  install-includes: varuint.h

executable clickhouse-haskell-exe
  main-is: Main.hs
  other-modules:
      Paths_clickhouse_haskell
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , io-streams
    , uri-encode
    , mtl
    , array
    , attoparsec
    , base >=4.7 && <5
    , binary
    , bytestring
    , call-stack
    , cassava
    , clickhouse-haskell
    , containers
    , csv
    , exceptions
    , ghc-prim
    , hashmap
    , haxl
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , lazy-csv
    , network
    , network-simple
    , network-uri
    , parsec
    , regex-tdfa
    , scanner
    , text
    , transformers
    , unordered-containers
    , vector
  default-language: Haskell2010

test-suite clickhouse-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Test.ColumnSpec
      Paths_clickhouse_haskell
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , io-streams
    , uri-encode 
    , mtl
    , HUnit
    , array
    , attoparsec
    , base >=4.7 && <5
    , binary
    , bytestring
    , call-stack
    , cassava
    , clickhouse-haskell
    , containers
    , csv
    , exceptions
    , ghc-prim
    , hashmap
    , haxl
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , lazy-csv
    , network
    , network-simple
    , network-uri
    , parsec
    , regex-tdfa
    , scanner
    , text
    , transformers
    , unordered-containers
    , vector
  default-language: Haskell2010
